<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <fragment
        android:id="@+id/map"
        android:name="com.elegion.tracktor.ui.map.TrackMapFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <fragment
        android:id="@+id/counter"
        android:name="com.elegion.tracktor.ui.map.CounterFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>